--- a/diary/diary-2022-02-01.md
+++ b/diary/diary-2022-02-01.md
@@ -10,3 +10,85 @@ workingPercent: 0
 ---
 
 There were technical issues with my clients servers so I was on pause for a couple of projects. Therefore, learning time!
+
+I'm building the site you are currently reading just now (which is just now for me, just now, not just now for you... just now).
+
+I'm trying to reduce media query use and https://every-layout.dev/ is a great resource for this. Galaxy brain CSS techniques in there.
+
+The most rewarding part of the day was creating a shortcode for https://www.11ty.dev/ that uses the https://www.11ty.dev/docs/plugins/image/ to process images and build out responsive background image styles. I should blog about that. At the moment it uses media queries (ironically, going by above comments) to deliver the correct size of image and also allows the browser to choose between avif, webp and jpeg formats. Once I can get the "image-set" CSS function working, I should be able to tidy this up.
+
+Here is the code for that:
+
+```
+const Image = require("@11ty/eleventy-img");
+
+async function imageShortcode(src, alt, cls, isBG, sizes, widths, formats) {
+  const sizesString = sizes || `(max-width: 2400px) 100vw, 2400px`;
+  const isBackground = isBG || false;
+
+  let metadata = await Image(src, {
+    widths: widths || [320, 960, 1200, 2400],
+    formats: formats || ["avif", "webp", "jpeg"],
+    outputDir: "./_site/img/"
+  });
+
+  let imageAttributes = {
+    class: cls || "",
+    alt,
+    sizes: sizesString,
+    loading: "lazy",
+    decoding: "async",
+  };
+
+  // console.log(metadata);
+  if (!isBackground) {
+    return Image.generateHTML(metadata, imageAttributes);
+  }
+  else {
+    // console.log(metadata.jpeg[0].filename);
+    const imagePrefix = "../img/";
+    let CSS = `
+    .${cls} {
+      background-image: url(${imagePrefix}${metadata.jpeg[3].filename});
+    }
+
+    @media (max-width: 320px) {
+      .${cls} {
+        background-image: url(${imagePrefix}${metadata.jpeg[0].filename});
+        background-image: url(${imagePrefix}${metadata.webp[0].filename});
+        background-image: url(${imagePrefix}${metadata.avif[0].filename});
+      }
+    }
+
+    @media (min-width: 321px) and (max-width: 640px) {
+      .${cls} {
+        background-image: url(${imagePrefix}${metadata.jpeg[1].filename});
+        background-image: url(${imagePrefix}${metadata.webp[1].filename});
+        background-image: url(${imagePrefix}${metadata.avif[1].filename});
+      }
+    }
+
+    @media (min-width: 641px) and (max-width: 1200px) {
+      .${cls} {
+        background-image: url(${imagePrefix}${metadata.jpeg[2].filename});
+        background-image: url(${imagePrefix}${metadata.webp[2].filename});
+        background-image: url(${imagePrefix}${metadata.avif[2].filename});
+      }
+    }
+
+    @media (min-width: 1201px) {
+      .${cls} {
+        background-image: url(${imagePrefix}${metadata.jpeg[3].filename});
+        background-image: url(${imagePrefix}${metadata.webp[3].filename});
+        background-image: url(${imagePrefix}${metadata.avif[3].filename});
+      }
+    }`;
+
+    const styleBlock = `<style>${CSS}</style>`;
+    // Set the img to display none
+    imageAttributes.class = "hide";
+    // const allCode = styleBlock + Image.generateHTML(metadata, imageAttributes)
+    return styleBlock;
+  }
+}
+```
