Close button working and hero fixed

--- a/diary/diary-2022-02-02.md
+++ b/diary/diary-2022-02-02.md
@@ -1,5 +1,5 @@
 ---
-title: UAS A2 course text.
+title: The joy of deleting code
 description: Sometimes you've got to do the legwork.
 date: 2022-02-02
 tags:
@@ -15,4 +15,8 @@ We are now developing the second part of the course.
 
 Found some time to work on the business site. I wanted to develop a hero feature that progressively enhances a div with a background image where an image description can be toggled on and off accessibly.
 
-I got it working then, as I often found, had to rebuild it from scratch fixing the mistakes I'd made in my first approach. Great way to learn!
+I got it working then, as I often found, had to rebuild it from scratch fixing the mistakes I'd made in my first approach. Great way to learn! The first build acts as a prototype where I realise the things I didn't initially consider. For example, what if the photo label had too much text? I hadn't designed the CSS 'defensively' so it couldn't cope. I didn't start from 'What if there's no javascript'. Amazing how designing that first simplifies the CSS, instead of bolting it on afterwards.
+
+I rebuilt, focussing on the correct HTML structure (which happened to be greatly simplified) and my CSS was about halved - a result of more clarity of purpose.
+
+I get great joy from deleting lines of code, knowing I've simplified things and made them easier to revisit and understand in future.
